@@ -47,7 +47,7 @@ class CleanupTest(unittest.TestCase):
     Test cleanup using duplicity binary
     """
     def setUp(self):
-        assert not os.system("tar xzf testfiles.tar.gz >& /dev/null")
+        assert not os.system("tar xzf testfiles.tar.gz > /dev/null 2>&1")
 
     def tearDown(self):
         assert not os.system("rm -rf testfiles tempdir temp2.tar")
